--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,7 +47,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/start"
-        android:textColor="#CFC9EA"
+        android:textColor="@color/forText"
         android:textSize="18sp"
         android:layout_gravity="left"
 
@@ -83,7 +83,7 @@
         android:layout_height="wrap_content"
         style="@style/Widget.MaterialComponents.Button"
         android:text="@string/Log_in"
-        android:textColor="#CFC9EA"
+        android:textColor="@color/forText"
         android:textSize="16sp"
         android:layout_gravity="left"
         />
