--- a/app/src/main/res/layout/result_activity.xml
+++ b/app/src/main/res/layout/result_activity.xml
@@ -6,20 +6,36 @@
     <View
         android:id="@+id/view"
         android:layout_width="match_parent"
-        android:layout_height="116dp" />
+        android:layout_height="48dp" />
 
     <TextView
         android:id="@+id/hi"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:textColor="#1A4862"/>
+        android:textSize="25sp"
+        android:textColor="@color/forDarkText"
+        android:layout_gravity="center_horizontal"
+        />
 
     <TextView
         android:id="@+id/mark"
         android:layout_width="64dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:textSize="80sp"
+        android:textSize="100sp"
         android:textColor="#FF0000"/>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="121dp" />
+
+    <Button
+        android:id="@+id/ok"
+        style="@style/Widget.MaterialComponents.Button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:text="@android:string/ok"
+        android:textColor="#CFC9EA"
+        android:textSize="18sp"/>
 </LinearLayout>
