--- a/app/src/main/res/layout/cheater_layout.xml
+++ b/app/src/main/res/layout/cheater_layout.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -40,6 +39,20 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:text="@string/add_q"
+        android:textColor="@color/forText"
+        android:textSize="16sp" />
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="10dp"/>
+
+    <Button
+        android:id="@+id/protocol_uronit_vse_for_natasha"
+        style="@style/Widget.MaterialComponents.Button"
+        android:layout_width="235dp"
+
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:text="@string/end"
         android:textColor="@color/forText"
         android:textSize="16sp" />
 </LinearLayout>
