--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -89,11 +89,23 @@
         android:layout_gravity="start"
         />
 
-    <!--   -->
+    <Button
+        android:id="@+id/log_up"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        style="@style/Widget.MaterialComponents.Button"
+        android:textColor="@color/forText"
+        android:textSize="16sp"
+        android:layout_gravity="start"
+        android:text="@string/log_up"/>
 
-
-
-
+    <TextView
+        android:id="@+id/hint_for_cheater"
+        android:layout_width="wrap_content"
+        android:layout_height="44dp"
+        android:text="@string/hint"
+        android:textColor="@color/forDarkText"
+        android:visibility="invisible"/>
 
 
 </LinearLayout>
