--- a/app/src/main/res/layout/logo.xml
+++ b/app/src/main/res/layout/logo.xml
@@ -22,6 +22,5 @@
         android:layout_gravity="center_horizontal"
         android:text="@string/app_name"
         android:textSize="30sp"
-        android:textColor="@color/forDarkText"
-/>
+        android:textColor="@color/forDarkText" />
 </LinearLayout>
