It is done!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!

--- a/app/src/main/res/layout/result_activity.xml
+++ b/app/src/main/res/layout/result_activity.xml
@@ -28,6 +28,15 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="121dp" />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/exit_activity"
+        android:text="@android:string/ok"
+        style="@style/Widget.MaterialComponents.Button"
+        android:textColor="@color/forText"
+        android:textSize="16sp"
+        android:layout_gravity="center_horizontal"/>
 
 
 </LinearLayout>
