--- a/app/src/main/res/layout/logo.xml
+++ b/app/src/main/res/layout/logo.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFFFFF"
     android:orientation="vertical">
 
     <View
@@ -13,14 +14,16 @@
         android:layout_height="109dp"
         android:layout_gravity="center_horizontal"
         android:src="@drawable/galochka" />
+
     <View
         android:layout_width="match_parent"
-        android:layout_height="20dp"/>
+        android:layout_height="20dp" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:text="@string/app_name"
-        android:textSize="30sp"
-        android:textColor="@color/forDarkText" />
+        android:textColor="@color/forDarkText"
+        android:textSize="30sp" />
 </LinearLayout>
